--- a/google/public/css/google.css
+++ b/google/public/css/google.css
@@ -11,7 +11,7 @@ body {
 }
 
 a {
-cursor: pointer;
+  cursor: pointer;
   text-decoration: none;
 }
 
@@ -24,53 +24,55 @@ a:hover {
   text-decoration: underline;
 }
 
+/*boutons*/
 button {
-  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
-  background-color: #f2f2f2;
+  height: 36px;
+  line-height: 27px;
+  min-width: 54px;
+  margin: 11px 4px;
+  padding: 0 16px;
   border: 1px solid #f2f2f2;
   border-radius: 4px;
   color: #5F6368;
   font-family: arial, sans-serif;
   font-size: 14px;
-  margin: 11px 4px;
-  padding: 0 16px;
-  line-height: 27px;
-  height: 36px;
-  min-width: 54px;
+  background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+  background-color: #f2f2f2;
   text-align: center;
   cursor: pointer;
   user-select: none;
 }
 
 button:hover {
+  color: #222;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
   background-color: #f8f8f8;
   border: 1px solid #c6c6c6;
-  color: #222;
 }
 
 input:focus {
-outline: none;
+ outline: none;
 }
 
+/*Entree de caractères par l'utilisateur*/
 input {
-width: 100%;
-border: none;
-font-size: 16px;
-margin: 5px 0;
-padding: 7px 0;
+  width: 100%;
+  border: none;
+  margin: 5px 0;
+  padding: 7px 0;
+  font-size: 16px;
 }
 
-/*Modifs Isa 
-    btn top*/
+
+/*Boutons top*/
 #btn {
+  width: max-content;
   margin-left: auto;
   display: flex;
-  justify-content: space-around;
-  font-size: 13px;
-  width: max-content;
   padding-top: 16px;
+  font-size: 13px;
+  justify-content: space-around;
 }
 
 #btn a {
@@ -82,14 +84,13 @@ padding: 7px 0;
   opacity: 0.85;
 }
 
-  /*Modifs Maël
-     boutton "Connexion" bleu*/
+  /*boutton "Connexion"*/
 #connexion {
-  background-color: #4285f4;
-  font-weight: bold;
-  color: whitesmoke !important;
   padding: 8px 13px 7px;
   border-radius: 2px;
+  color: whitesmoke !important;
+  font-weight: bold;
+  background-color: #4285f4;
 }
 
 #connexion:hover {
@@ -98,60 +99,79 @@ padding: 7px 0;
   opacity: 1 !important;
 }
 
+/*Logo Google*/
 #logo {
-  margin-top: 43px;
   height: 233px;
-}
-
-  /*Modifs footer Isa */
-#footer-main,
-#footer-main2 {
-  position: fixed;
-  bottom: 0;
-  background: #f2f2f2;
-  line-height: 40px;
-  min-width: 980px;
-  border-top: 1px solid #e4e4e4;
-  width: 100%;
-  /*JP*/
-  font-size: 14px;
-}
-
-#inp {
-  width: calc(100% - 52px);
-  display: flex;
-  flex: 100%;
-  float: left;
-  border: none;
-}
-
-#loupe {
-  margin: 12px 2px 8px 0;
-  display: block;
-  float: left;
-  border: none;
-  opacity: 0.4;
-}
-
-#mic {
-  margin: 10px -2px 5px 5px;
-  font-size: 19px;
-  display: block;
-  float: right;
-  border: none;
+  margin-top: 43px;
 }
 
 #br {
   width: 550px;
   padding: 0 17px 0 14px;
-  border-radius: 24px;
   border: solid 1px #dfe1e5;
+  border-radius: 24px;
 }
 
 #br:hover {
   box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
   border-color: rgba(223, 225, 229, 0);
   text-decoration: none !important;
+}
+
+#loupe {
+  display: block;
+  border: none;
+  margin: 12px 2px 8px 0;
+  opacity: 0.4;
+  float: left;
+}
+
+#inp {
+  display: flex;
+  width: calc(100% - 52px);
+  border: none;
+  flex: 100%;
+  float: left;
+}
+
+#mic {
+  display: block;
+  margin: 10px -2px 5px 5px;
+  border: none;
+  font-size: 19px;
+  float: right;
+}
+
+#covid {
+  margin-bottom: 32px;
+  font-size: small;
+}
+
+.neuf {
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-image: url('../img/googleico.png');
+  background-size: 528px 68px;
+  background-position: -132px -38px;
+  box-sizing: border-box;
+  opacity: .55;
+}
+
+#footer-main2 {
+  display: none;
+}
+
+#footer-main,
+#footer-main2 {
+  width: 100%;
+  min-width: 980px;
+  border-top: 1px solid #e4e4e4;
+  bottom: 0;
+  position: fixed;
+  background: #f2f2f2;
+  line-height: 40px;
+  font-size: 14px;
 }
 
 #footer-main a,
@@ -166,10 +186,10 @@ padding: 7px 0;
 }
 
 #footer-bottom {
-  font-size: 14px;
-  border-top: 1px solid #e4e4e4;
   width: calc(100% - 7px);
   margin-left: 7px;
+  border-top: 1px solid #e4e4e4;
+  font-size: 14px;
 }
 
 #footer-left {
@@ -213,26 +233,6 @@ padding: 7px 0;
   background: linear-gradient(180deg, #4285f4, #4285f4, #4285f4, #fbbc05, #ea4335, #ea4335);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-#covid {
-  font-size: small;
-  margin-bottom: 32px;
-}
-
-.neuf {
-  background-image: url('../img/googleico.png');
-  background-size: 528px 68px;
-  background-position: -132px -38px;
-  box-sizing: border-box;
-  opacity: .55;
-  height: 30px;
-  width: 30px;
-  display: block;
-}
-
-#footer-main2 {
-  display: none;
 }
 
 @media (max-width:1196px) {
