omg t'es a la bourre dans tes push :D

--- a/bootstrap/public/css/css.css
+++ b/bootstrap/public/css/css.css
@@ -48,3 +48,7 @@
     animation-delay: 1760ms;
     transform: rotate(135deg);
 }
+/*****************
+*   Psycho@ctiF  *
+*       Pe@cE    *
+*****************/
